<resources>
    <string name="app_name">mobile dev hits</string>
    <string name="rotate">ROTATE</string>
    <string name="color">COLOR</string>
    <string name="scale">SCALE</string>
    <string name="face">FACE</string>
    <string name="vector_edit">VECTOR</string>
    <string name="retouch">RETOUCH</string>
    <string name="blur">BLUR</string>
    <string name="affine">AFFINE</string>
    <string name="cube">CUBE</string>
    <string name="button_return_back">button_return_back</string>
    <string name="photo" />
    <string name="button_second_filter" />
    <string name="button_third_filter" />
    <string name="button_standart_filter" />
    <string name="button_first_filter" />
    <string name="button_fourth_filter" />
    <string name="button_fifth_filter" />
    <string name="button_sixth_filter" />
    <string name="button_return_from_colorfilter_to_choosetools" />
    <string name="button_save_color_changes" />
    <string name="currentphoto">currentPhoto</string>
    <string name="button_return">button_return</string>
    <string name="colorfilterphoto">ColorFilterPhoto</string>
    <string name="button_back_to_filters">button_back_to_filters</string>
    <string name="threshold">Threshold</string>
    <string name="radius">Radius</string>
    <string name="amount">Amount</string>
    <string name="image_saved">Successful! Edited image was saved.</string>
    <string name="button_edit" />
    <string name="button_save_vector_edit_changes" />
    <string name="currentPhoto" />
    <string name="button_save_affine_changes" />
    <string name="rotate_button_text" />
    <string name="button_undo" />
    <string name="button_redu" />
    <string name="button_save" />
    <string name="detect_faces">Detect</string>
    <string name="brush_size">Brush size</string>
    <string name="coefficient">Coefficient</string>
    <string name="angle_rotation">Angle rotation</string>
    <string name="button_scale">Scale</string>
    <string name="scale_value">Scale value</string>
    <string name="mask">Mask</string>
    <string name="rotate_btn">Rotate</string>
    <string name="size_warning">Куда разогнался?</string>
    <string name="large_size_warning">Размер полученной фотографии будет слишком большой</string>
    <string name="small_size_warning">Размер полученной фотографии будет слишком маленький</string>
    <string name="start">start</string>
    <string name="finish">finish</string>
    <string name="confirm">confirm</string>
</resources>