<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/apply"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/currentPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/currentPhoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/button_save_changes"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/button_save_vector_edit_changes"
        app:layout_constraintBottom_toBottomOf="@+id/currentPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/check" />

    <ImageButton
        android:id="@+id/button_redu"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/button_back_to_filters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_save_changes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/corner_up_left" />


    <ImageButton
        android:id="@+id/button_edit"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginBottom="85dp"
        android:contentDescription="@string/button_edit"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_draw_points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/button_start"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginBottom="85dp"
        android:contentDescription="@string/button_edit"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>